UI/Minor: Give more space to sliders to avoid ugly cutoff

--- a/public/stylesheets/widgets.css
+++ b/public/stylesheets/widgets.css
@@ -373,8 +373,8 @@
   background-color: transparent;
   height: 22px;
   margin: 0px;
-  margin-bottom: -5px;
-  margin-top: 2px;
+  margin-bottom: -3px;
+  margin-top: -1px;
   padding: 0px;
   width: 100%;
 }
